feat: add header

--- a/index.html
+++ b/index.html
@@ -4,12 +4,31 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Magra:wght@400;700&family=Merriweather:wght@400;700&family=Poppins:wght@400;700&family=Red+Hat+Text:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <title>Travel</title>
 </head>
 <body>
   <header>
-
+    <div class="header_wrapper">
+      <div class="header_flex">
+        <div class="logo">
+          <img src="../Travel/assets/svg/logo.svg" alt="logo">
+          <h1>Travel Portal </h1>
+        </div>
+        <nav class="header_navigation">
+          <ul class="header_navigation_list">
+            <li class="header_navigation_item"><a class="header_navigation_link" href="">How It Works</a></li>
+            <li class="header_navigation_item"><a class="header_navigation_link" href="">Plan Your Trip</a></li>
+            <li class="header_navigation_item"><a class="header_navigation_link" href="">Destinations</a></li>
+            <li class="header_navigation_item"><a class="header_navigation_link" href="">Travel Stories</a></li>
+          </ul>
+        </nav>
+        <button class="header_buton">Login</button>
+      </div>     
+    </div>    
   </header>
   <main>
 
