feat: add review section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Magra:wght@400;700&family=Merriweather:wght@400;700&family=Poppins:wght@400;700&family=Red+Hat+Text:wght@400;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Aleo:wght@400;700&family=Inter:wght@400;700&family=Magra:wght@400;700&family=Merriweather:wght@400;700&family=Poppins:wght@400;700&family=Red+Hat+Text:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <title>Travel</title>
 </head>
@@ -31,7 +31,18 @@
     </div>    
   </header>
   <main>
-
+    <section class="preview">
+      <div class="preview_wrapper">
+        <div class="preview_flex">
+          <h2 class="preview_title">Explore the beauty of the World</h2>
+          <p class="preview_description">Receive personalized recommendations for countries, hotels, activities and more</p>
+          <div class="preview_input">
+            <span class="preview_input_description">What would you like to do?</span>
+            <button class="preview_button">Start Planning</button>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer>
 
