feat: add steps section

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
           </ul>
         </nav>
         <button class="header_buton">Login</button>
-      </div>     
-    </div>    
+      </div>       
+    </div>      
   </header>
   <main>
     <section class="preview">
@@ -42,6 +42,31 @@
           </div>
         </div>
       </div>
+    </section>
+    <section class="steps">
+      <div class="steps_wrapper">
+        <h3 class="steps_title">3 STEPS TO THE PERFECT TRIP</h3>
+        <div class="steps_cards">
+          <div class="card_item">
+            <div class="item_image">
+              <img src="../Travel/assets/svg/item_logo_one.svg" alt="">
+            </div>
+            <span class="item_text">Tell us what you want to do</span>
+          </div>
+          <div class="card_item">
+            <div class="item_image">
+              <img src="../Travel/assets/svg/item_logo_two.svg" alt="">
+            </div>
+            <span class="item_text">Share us preferable dates</span>
+          </div>
+          <div class="card_item">
+            <div class="item_image">
+              <img src="../Travel/assets/svg/item_logo_three.svg" alt="">
+            </div>
+            <span class="item_text">We will give you recommendations</span>
+          </div>
+        </div>
+      </div>      
     </section>
   </main>
   <footer>
