feat: start destinations section

--- a/index.html
+++ b/index.html
@@ -68,6 +68,25 @@
         </div>
       </div>      
     </section>
+    <section class="destination">
+      <div class="destination_wrapper">
+        <h3 class="destination_title">POPULAR DESTINATIONS</h3>
+        <div class="slider">
+          <div class="slider_item">
+            <img src="../Travel/assets/images/Rectangle 23.png" alt="">
+            <span class="slider_text">SPAIN</span>
+          </div>
+          <div class="slider_item">
+            <img src="../Travel/assets/images/Rectangle 24.png" alt="">
+            <span class="slider_text">JAPAN</span>
+          </div>
+          <div class="slider_item">
+            <img src="../Travel/assets/images/Rectangle 25.png" alt="">
+            <span class="slider_text">USA</span>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer>
 
