feat: complete destination section

--- a/index.html
+++ b/index.html
@@ -82,8 +82,19 @@
           </div>
           <div class="slider_item">
             <img src="../Travel/assets/images/Rectangle 25.png" alt="">
-            <span class="slider_text">USA</span>
+            <span class="slider_text">USA</span>            
           </div>
+        </div>
+        <div class="slider_navigation">
+          <div class="slider-nav_wrapper">
+            <div class="nav_dot"></div>
+            <div class="nav_dot active_dot"></div>
+            <div class="nav_dot"></div>
+          </div>
+        </div>
+        <div class="destination_button">
+          <img src="../Travel/assets/svg/arrow.svg" alt="arrow">
+          <span>Find More</span>
         </div>
       </div>
     </section>
