--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <div class="card_item">
             <div class="item_image">
               <img src="../Travel/assets/svg/item_logo_three.svg" alt="">
-            </div>
+            </div>            
             <span class="item_text">We will give you recommendations</span>
           </div>
         </div>
@@ -95,6 +95,53 @@
         <div class="destination_button">
           <img src="../Travel/assets/svg/arrow.svg" alt="arrow">
           <span>Find More</span>
+        </div>
+      </div>
+    </section>
+    <section class="stories">
+      <div class="stories_wrapper">
+        <h3 class="stories_title">TRAVEL STORIES</h3>
+        <div class="stories_list">
+          <div class="sories_item">
+            <div class="sories_item_image">
+            </div>
+            <div class="sories_item_description">
+              <h4 class="story_tem_title">10 Photos of Attractive Thailand</h4>
+              <p class="story_tem_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+              <span class="read_more">Read More</span>
+            </div>
+          </div>
+          <div class="sories_item">
+            <div class="sories_item_image">
+            </div>
+            <div class="sories_item_description">
+              <h4 class="story_tem_title">Canyonlands National Park, Utah</h4>
+              <p class="story_tem_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+              <span class="read_more">Read More</span>
+            </div>
+          </div>
+          <div class="sories_item">
+            <div class="sories_item_image">
+            </div>
+            <div class="sories_item_description">
+              <h4 class="story_tem_title">I left my heart in the Mountains!</h4>
+              <p class="story_tem_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+              <span class="read_more">Read More</span>
+            </div>
+          </div>
+          <div class="sories_item">
+            <div class="sories_item_image">
+            </div>
+            <div class="sories_item_description">
+              <h4 class="story_tem_title">The Longest journey in my life!</h4>
+              <p class="story_tem_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+              <span class="read_more">Read More</span>
+            </div>
+          </div>
+        </div>
+        <div class="destination_button">
+          <img src="../Travel/assets/svg/arrow.svg" alt="arrow">
+          <span>See More</span>
         </div>
       </div>
     </section>
