feat: complete stories and add footer

--- a/index.html
+++ b/index.html
@@ -139,15 +139,23 @@
             </div>
           </div>
         </div>
-        <div class="destination_button">
+        <div class="stories_button">
           <img src="../Travel/assets/svg/arrow.svg" alt="arrow">
           <span>See More</span>
         </div>
+        <div class="stories_bottom"></div>
       </div>
     </section>
   </main>
   <footer>
-
+    <div class="footer_wrapper">
+      <span class="copyright">All Rights Reserved © Travel Portal</span>
+      <div class="socials">
+        <img src="/Travel/assets/svg/insta.svg" alt="">
+        <img src="/Travel/assets/svg/youtube.svg" alt="">
+        <img src="/Travel/assets/svg/twitter.svg" alt="">
+      </div>
+    </div>    
   </footer>
   <script src="/Travel/main.js"></script>
 </body>
